--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vuextest</title>
+    <link ref="stylesheet" href="http://at.alicdn.com/t/font_1439790_70r18lbbplr.css"></link>
   </head>
   <body>
     <div id="app"></div>
