--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vuextest</title>
-    <link ref="stylesheet" href="http://at.alicdn.com/t/font_1439790_70r18lbbplr.css"></link>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <!-- viewport -->
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable-no">
+  <title>gshop</title>
+  <link ref="stylesheet" href="./static/css/reset.css" />
+  <!-- 图标库 -->
+  <link ref="stylesheet" href="http://at.alicdn.com/t/font_1439790_70r18lbbplr.css">
+  </link>
+  <!-- 移动端点击延迟0.3s问题 -->
+  <script src="https://a.alipayobjects.com/static/fastclick/1.0.6/fastclick.min.js"></script>
+  <script>
+    if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function () {
+        FastClick.attach(document.body);
+      }, false);
+    }
+
+  </script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
