--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport"
     content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable-no">
   <title>gshop</title>
-  <link ref="stylesheet" href="./static/css/reset.css" />
+  <link rel="stylesheet" href="./static/css/reset.css" />
   <!-- 图标库 -->
-  <link ref="stylesheet" href="http://at.alicdn.com/t/font_1439790_70r18lbbplr.css">
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_1439790_f88j38x9hzg.css">
   </link>
   <!-- 移动端点击延迟0.3s问题 -->
   <script src="https://a.alipayobjects.com/static/fastclick/1.0.6/fastclick.min.js"></script>
@@ -24,7 +24,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
   <!-- built files will be auto injected -->
 </body>
 
